2.1.0/_sources/gallery/mplot3d/rotate_axes3d.rst.txt


.. _sphx_glr_gallery_mplot3d_rotate_axes3d.py:


==================
Rotating a 3D plot
==================

A very simple animation of a rotating 3D plot.

See wire3d_animation_demo for another simple example of animating a 3D plot.




.. image:: /gallery/mplot3d/images/sphx_glr_rotate_axes3d_001.png
    :align: center





.. code-block:: python


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt

    fig = plt.figure()
    ax = fig.add_subplot(111, projection='3d')

    # load some test data for demonstration and plot a wireframe
    X, Y, Z = axes3d.get_test_data(0.1)
    ax.plot_wireframe(X, Y, Z, rstride=5, cstride=5)

    # rotate the axes and update
    for angle in range(0, 360):
        ax.view_init(30, angle)
        plt.draw()
        plt.pause(.001)

**Total running time of the script:** ( 0 minutes  13.707 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: rotate_axes3d.py <rotate_axes3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: rotate_axes3d.ipynb <rotate_axes3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
